<resources>
    <string name="app_name">Shepherd</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>

    <string name="label_home">Home</string>
    <string name="label_favorite">Favorite</string>
    <string name="label_search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_action_search">Search</string>
</resources>
